fixed spacing of first song

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ html {
   #blub1 {
     position: absolute;
       top: 300px;
-      left: 100px;
+      left: 75px;
     background:black;
     color:white;
     font-size: 1.5em;
